# Mini-agent

./: .gitignore  pyproject.toml
.kiro/specs/rag-knowledge-tool/: .config.kiro  design.md  requirements.md  tasks.md
fastapi-agent/: .env.example  README.md  agent.py  main.py  pyproject.toml  requirements.txt  test_tools.py  tools.py
label-ocr/: .env.example  README.md  main.py  ocr_service.py  pyproject.toml  requirements.txt
langchain-agent/: .env.example  README.md  main.py  pyproject.toml  requirements.txt  tools.py
langgraph-agent/: .env.example  README.md  agents.py  graph.py  main.py  pyproject.toml  requirements.txt  test_run.py  tools.py
mini-agent/: .env.example  README.md  agent.py  main.py  pyproject.toml  tools.py
mini-agent/exercises/: README.md  ex1_dict.py  ex2_env.py  ex3_function.py  ex4_class.py  ex5_tools.py  ex6_agent.py  ex7_advanced.py  ex8_async.py
rag-agent/: .env.example  README.md  ingest.py  pyproject.toml  query.py  requirements.txt
rag-agent/docs/: ai_agent.txt  fastapi_guide.txt  python_basics.txt
