[project]
name = "python-mini-agent"
version = "1.0.0"
description = "Python AI Agent 学习项目合集"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langgraph>=0.2.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "chromadb>=0.5.0",
    "python-multipart>=0.0.9",
    "httpx>=0.25.0",
    "PyMuPDF>=1.24.0",
]
