[project]
name = "fastapi-agent"
version = "1.0.0"
description = "FastAPI + LangChain Agent Demo"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "chromadb",
    "langchain-community",
    "langchain-text-splitters",
]
